--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -14,16 +14,16 @@
 }
 
 .btn-primary {
-    background-color: var(--clr-primary-1primary);
+    background-color: var(--clr-primary-1);
     color: var(--clr-primary-2);
-    border: var(--primary);
+    border: 1px solid var(--clr-primary-1);
 }
 
-.bth-outline {
+.btn-outline {
     background-color: transparent;
-    color: #fff;
+    color: var(--clr-primary-1);
     padding: var(--padding);
-    border: 1px solid var(--clr-primary-1primary);
+    border: 1px solid var(--clr-primary-1);
     transition: all 0.3s ease-out;
 }
 
@@ -38,7 +38,8 @@
 }
 
 .btn-medium:hover, .btn-large:hover {
-    background-color: var(--clr-primary-1primary);
+    background: var(--clr-primary-1);
     color: var(--clr-primary-2);
     transition: all 0.3s ease-out;
+    transition: 250ms;
 }
